# SimpleFileHosting

./: .gitignore  COPYING  Cargo.toml  README.md
frontend/: index.html
frontend/static/: 404.html
src/: main.rs  settings.rs  utils.rs
