[package]
name = "SimpleFileHosting"
version = "0.1.0"
authors = ["Youssef Hesham <m1cr0xf7@protonmail.com>"]
edition = "2018"
license = "GPL-3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.4", features = ["postgres"] }

dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.4"

serde = "1"
serde_json = "1"

rand = "0.8.4"

actix-multipart = "0.3"
futures-util = "0.3"

actix-files = "0.5"
